<resources>
    <string name="app_name">AutoLAB</string>
    <string name="tab_text_1">Customer</string>
    <string name="tab_text_2">Vehicle</string>
    <string name="tab_text_3">Body</string>
    <string name="tab_text_4">Job Card</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="customer_id">Customer Id</string>
    <string name="customer_name">Name</string>
    <string name="customer_phone_no">Phone No.</string>
    <string name="customer_address">Address</string>
    <string name="customer_city">City</string>
    <string name="customer_state">State</string>
    <string name="customer_pin">PIN No.</string>
    <string name="customer_email">Email</string>

    <string name="vehicle_reg_no">Registration No.</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>

    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="vehicle_make">
        <item>Maruti Suzuki</item>
        <item>Hyundai</item>
        <item>Mahindra</item>
        <item>Tata</item>
        <item>Renault</item>
        <item>Chevrolet</item>
    </string-array>

    <string name="body_front">Front</string>
    <string name="body_back">Back</string>
    <string name="body_left">Left</string>
    <string name="body_right">Right</string>
</resources>
