<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nordicoverseas.nilutpol.autolab.Vehicle">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/vehicle_reg_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_reg_no" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/label_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_make" />

    <Spinner
        android:id="@+id/spinner_vehicle_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/vehicle_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_model" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
